--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" type="text/css" href="./libs/dist/leaflet.css" />
 
     <style>
-        html, body, #map {
+        html,
+        body,
+        #map {
             height: 100%;
             width: 100%;
             margin: 0px;
@@ -17,9 +19,8 @@
     </style>
 
     <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script type="text/javascript" src="./libs/dist/leaflet.js">
-
-    </script>
+    <script type="text/javascript" src="./libs/dist/leaflet.js"></script>
+    <script type="text/javascript" src="./libs/Yandex.js"></script>
 
 </head>
 
@@ -30,12 +31,32 @@
     <script type="text/javascript">
         var osmLayer = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-        });
+        }),
+            osmOutdoor = L.tileLayer('https://tile.thunderforest.com/outdoors/{z}/{x}/{y}.png', {
+                attribution: 'Туристическая карта OSM'
+            }),
+            googleSat = L.tileLayer('https://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
+                attribution: 'Гугол спутнык',
+                subdomains: ['mt0','mt1','mt2','mt3'],
+            });
+            yandexSat = L.tileLayer('https://sat02.maps.yandex.net/tiles?l=sat&v=3.1493.0&x={x}&y={y}&z={z}&scale=1&lang=ru_RU', {
+                attribution: 'Тындекс',    
+            });
         var myMap = L.map('map', {
-            center: [55,37],
+            center: [55, 37],
             zoom: 14,
             layers: [osmLayer],
         });
+
+        var baseLayers = {
+            'OSM карта': osmLayer,
+            'Туристическая карта OSM': osmOutdoor,
+            'Гугол спутнык':googleSat,
+            'Тындекс':yandexSat,
+        };
+
+        // layer switching
+        L.control.layers(baseLayers).addTo(myMap);
     </script>
 </body>
 
