--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script type="text/javascript" src="./libs/dist/leaflet.js"></script>
+    <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru-RU"></script>
     <script type="text/javascript" src="./libs/Yandex.js"></script>
 
 </head>
@@ -29,6 +30,27 @@
 
     <div id="map"></div>
     <script type="text/javascript">
+        function traffic() {
+            var trafficProvider = new ymaps.traffic.provider.Actual({}, {
+                infoLayerShown: true
+            });
+            trafficProvider.setMap(this._yandex);
+        };
+
+        L.Yandex.addInitHook('on','load', function(){
+            this._setStyle(this._yandex.controls.getContainer(), {
+                right: '50px',
+                top: '11px',
+                width: 'auto'
+            });
+        });
+
+        function trafficControl(){
+            this._yandex.controls
+                .add('trafficControl', {size: 'auto'})
+                .get('trafficControl').state.set('trafficShow', true)
+        };
+
         var osmLayer = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }),
@@ -37,26 +59,41 @@
             }),
             googleSat = L.tileLayer('https://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
                 attribution: 'Гугол спутнык',
-                subdomains: ['mt0','mt1','mt2','mt3'],
-            });
-            yandexSat = L.tileLayer('https://sat02.maps.yandex.net/tiles?l=sat&v=3.1493.0&x={x}&y={y}&z={z}&scale=1&lang=ru_RU', {
-                attribution: 'Тындекс',    
-            });
+                subdomains: ['mt0', 'mt1', 'mt2', 'mt3'],
+            }),
+            yandexSat1 = L.tileLayer('https://sat02.maps.yandex.net/tiles?l=sat&v=3.1493.0&x={x}&y={y}&z={z}&scale=1&lang=ru_RU', {
+                attribution: 'Тындекс',
+            }),
+            yandexMap = L.yandex('map', {
+                attribution: 'Данные Yandex-карт',
+            }),
+            yandexTraffic = L.yandex('overlay', {
+                attribution: 'Данные дорожной обстановки Yandex',
+            })
+                .on('load', traffic),
+            yandexTrafficControl = L.yandex('overlay', {
+                attribution: 'Данные дорожной обстановки Yandex',
+            })
+                .on('load', trafficControl)
         var myMap = L.map('map', {
             center: [55, 37],
             zoom: 14,
-            layers: [osmLayer],
+            layers: [yandexMap],
         });
 
         var baseLayers = {
             'OSM карта': osmLayer,
             'Туристическая карта OSM': osmOutdoor,
-            'Гугол спутнык':googleSat,
-            'Тындекс':yandexSat,
-        };
-
+            'Гугол спутнык': googleSat,
+            'Тындекс': yandexSat1,
+            'Тындекс 2.0': yandexMap,
+        },
+            overlayLayers = {
+                'Яндекс_пробки': yandexTraffic,
+                'Яндекс пробки с элементом управления':yandexTrafficControl,
+            };
         // layer switching
-        L.control.layers(baseLayers).addTo(myMap);
+        L.control.layers(baseLayers, overlayLayers).addTo(myMap);
     </script>
 </body>
 
