--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 
     <div id="map"></div>
+    <script type="text/javascript" src="./data/shapes/railwayStations.js"></script>
     <script type="text/javascript">
         function traffic() {
             var trafficProvider = new ymaps.traffic.provider.Actual({}, {
@@ -83,7 +84,7 @@
             })
         var myMap = L.map('map', {
             center: [55.7674, 37.6593],
-            zoom: 18,
+            zoom: 13,
             layers: [yandexMap],
         });
 
@@ -159,6 +160,22 @@
         })
         .bindPopup('Подъезд с Гороховского')
         .addTo(myMap)
+        
+        L.geoJSON(rws, {
+            pointToLayer: function(feature,latlng) {
+                let yearOpen = feature.properties.yearOpen
+                yearOpen < 1900 ? icn = parkIconArray[1] :
+                yearOpen > 1900 && yearOpen < 2000 ? icn = parkIconArray[2] :
+                    icn = parkIconArray[4];
+                return L.marker(latlng, {
+                    title: feature.properties.name,
+                    icon: icn
+                })
+            }
+        }).bindPopup(function(rws){
+            return '<b>Название вокзала: </b><i>' + rws.feature.properties.name + '</i>'
+        })
+        .addTo(myMap);
 
         var baseLayers = {
             'OSM карта': osmLayer,
