--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="./libs/dist/leaflet.css" />
+    <title>Document</title>
 
     <style>
         html,
@@ -18,10 +17,15 @@
         }
     </style>
 
+    <link rel="stylesheet" type="text/css" href="./libs/dist/leaflet.css" />
+
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script type="text/javascript" src="./libs/dist/leaflet.js"></script>
     <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru-RU"></script>
     <script type="text/javascript" src="./libs/Yandex.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="./libs/dist/leaflet-measure.css">
+    <script type="text/javascript" src="./libs/dist/leaflet-measure.min.js"></script>
 
 </head>
 
