--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             width: 100%;
             margin: 0px;
         }
+        .legendMap{
+            background:  RGBA(255,255,255,0.9); 
+            border-radius: 10px; 
+            padding: 5px;
+        }
     </style>
 
     <link rel="stylesheet" type="text/css" href="./libs/dist/leaflet.css" />
