--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <link rel="stylesheet" type="text/css" href="./libs/dist/leaflet-measure.css">
     <script type="text/javascript" src="./libs/dist/leaflet-measure.min.js"></script>
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+    <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script> 
 </head>
 
 <body>
